S20SS2FAVE-77 Adding text and image to main page - CSS for image is still not centered, attempting to fix

--- a/application/static/stylesheet.css
+++ b/application/static/stylesheet.css
@@ -71,6 +71,7 @@
 }
 
 #homeLogo{
+	display: block;
 	align-content: center;
 	padding: 5px;
 }
